[package]
name = "bevy_panorbit_camera"
version = "0.20.2"
authors = ["Plonq"]
edition = "2021"
description = "A basic pan and orbit camera in Bevy"
keywords = ["gamedev", "bevy", "orbit", "camera"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Plonq/bevy_panorbit_camera"
homepage = "https://github.com/Plonq/bevy_panorbit_camera"
readme = "README.md"

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_render",
    "bevy_window",
] }

[dev-dependencies]
bevy = { version = "0.15.0" }
float-cmp = "0.9.0"

[patch.crates-io.bevy]
git = "https://github.com/n-drw/bevy"
